# decentralized_company_feedback

./: Cargo.toml  README.md  deploy.sh  test.sh
src/: lib.rs
web/: .env
web/src/: App.js  config.js  index.js
web/src/components/: Feedback.js  FeedbackList.js
